desenvolvimento da página html e estilização css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>One Piece World</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+    <img src="img/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
+    <input type="text" id="searchInput" placeholder="Buscar personagem..." autocomplete="off" />
+  </header>
+
+  <main>
+    <ul id="characterList" class="hidden"></ul>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
