feat: implementar busca por personagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 
   <main>
-    <ul id="characterList" class="hidden"></ul>
+    <ul id="characterList"></ul>
   </main>
 
   <script src="script.js"></script>
