--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece World</title>
+<html lang="pt-BR">
 
-    <link rel="stylesheet" href="style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>One Piece World</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
+  <header>
     <img src="img/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
     <input type="text" id="searchInput" placeholder="Buscar personagem..." autocomplete="off" />
   </header>
@@ -19,4 +21,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
