feat: implementar busca por personagem e redirecionamento para página de detalhes

--- a/html/personagem.html
+++ b/html/personagem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="tituloPagina"></title>
+    <title id="tituloPagina">One Piece World</title>
 
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -14,6 +14,18 @@
         <img src="../img/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
     </header>
 
+    <main class="main-pagina-personagem">
+        <a href="../index.html">Voltar</a>
+        <p id="nomeEAlcunhaPersonagem"></p>
+        <img src="" alt="" id="imagemPersonagem">
+        <p id="recompensaPersonagem"></p>
+        <p id="frutaPersonagem"></p>
+        <p id="descricaoPersonagem"></p>
+        <p id="textoPersonagem"></p>
+        <p id="mensagemErro" style="color: red;"></p>
+    </main>
+
+    <script src="../script-personagem.js"></script>
 </body>
 
 </html>
