:recycle: refactor: Refatoração da arquitetura de pastas do projeto e adaptação da lógica

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>One Piece World</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
   <header>
-    <img src="img/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
+    <img src="img/personagens/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
     <input type="text" id="searchInput" placeholder="Buscar personagem..." autocomplete="off" />
   </header>
 
@@ -19,7 +19,7 @@
     <ul id="characterList"></ul>
   </main>
 
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
