--- a/pages/personagem.html
+++ b/pages/personagem.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="tituloPagina">One Piece World</title>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="../img/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
+        <img src="../img/personagens/One_Piece_-_A_Série_logo.png" alt="imagem do logo de One Piece">
     </header>
 
     <main class="main-pagina-personagem">
@@ -25,7 +25,7 @@
         <p id="mensagemErro" style="color: red;"></p>
     </main>
 
-    <script src="../script-personagem.js"></script>
+    <script src="../assets/js/script-personagem.js"></script>
 </body>
 
 </html>
